Adding a title and image

--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html lang = "en">
-    <head>
-        <style>
-            .para{background-color: blue}
-        </style>
-        <title>an example title</title>
-    </head>
-    <body>
-        <p style = "background-color: aquamarine;">a test paragraph<br>see if it works</p>
-        <p class = "para">this text should have a blue background</p>
-
-        <p>a test for an unordered list:</p>
-        <!-- undefined list-->
-        <ul type = "circle">
-            <li>example 1</li>
-            <li>example 2</li>
-            <li>example 3</li>
-        </ul>
-
-        <p>a test for ordered lists (and atributes):</p>
-        <!--Ordered list-->
-        <ol type = "i" start = 10>
-            <li>example 1</li>
-            <li>example 2</li>
-            <li>example 3</li>
-        </ol>
-
-        <!--description list-->
-        <dl>
-            <dt>test 1</dt>
-            <dd>description 1</dd>
-            <br>
-            <dt>test 2</dt>
-            <dd>description 2</dd>
-        </dl>
 
 
-        <p>nested list example:</p>
-        <ul>
-            <li>list 1
-                <ol>
-                    <li>red</li>
-                    <li>black</li>
-                    <li>white</li>
-                    <li>another colour</li>
-                </ol>
-            </li>
-        </ul>
+<head>
+<title>YOMI Hustle</title>
 
-    </body>
+<style>
+    .center{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+</head>
+
+
+<body>
+
+<header>
+<div style = "text-align: center;"> <!--aligns to center-->
+<h1 style = "background-color: lightseagreen;">My favorite game of all time</h1>
+</div>
+</header>
+
+<!--YOMI Hustle steam storefront image-->
+<img class = "center"
+     src = "https://wiki.gbl.gg/images/thumb/4/43/YH_Splash.png/640px-YH_Splash.png" 
+     alt = "the steam storefront image">
+
+<!--a short description of what the game is-->
+<h3>What is YOMI Hustle?</h3>
+
+<p>Your only move is hustle (YOMI hustle for short) is a two player fighting game
+     with a layout similar to street fighter. The main twist on the genre is that 
+    the game is played in a turn based format.</p> 
+</body>
+
+
 </html>
