Adding a paragraph giving a rough explanation of the gameplay loop and why it's entertaining

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <head>
 <title>YOMI Hustle</title>
 
+<!--makes any image with the class image_center align to the middle of the screen-->
 <style>
-    .center{
+    .image_center{
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -18,13 +19,14 @@
 <body>
 
 <header>
-<div style = "text-align: center;"> <!--aligns to center-->
+<!--gives the title a background colour and aligns the text to the center-->
+<div style = "text-align: center;">
 <h1 style = "background-color: lightseagreen;">My favorite game of all time</h1>
 </div>
 </header>
 
 <!--YOMI Hustle steam storefront image-->
-<img class = "center"
+<img class = "image_center"
      src = "https://wiki.gbl.gg/images/thumb/4/43/YH_Splash.png/640px-YH_Splash.png" 
      alt = "the steam storefront image">
 
@@ -33,7 +35,14 @@
 
 <p>Your only move is hustle (YOMI hustle for short) is a two player fighting game
      with a layout similar to street fighter. The main twist on the genre is that 
-    the game is played in a turn based format.</p> 
+    the game is played in a turn based format.</p>
+
+<!--explains the gameplay loop for the game-->
+<p>YOMI Hustle is a multiplayer game, meaning each fight is unique and different, providing variety to playing the game.
+    if you want to be good, you have to spend time in each match learning what type of player you are up against and how
+    best to counter their play style, forcing to engage with each fight, as they often go on for ~30 minutes, meaning there
+    is plenty of time to get to know you're opponent.
+</p>
 </body>
 
 
