Adding pictures to the Beagle and Labrador files

--- a/Schnoodle.html
+++ b/Schnoodle.html
@@ -21,7 +21,7 @@
 <a = href = "index.html"><h2>Navigator</h2></a>
 
 <img class = "imageCenter"
-width = "300"
+width = "25%"
 src = "Pictures/Schnoodle.jpg"
 alt = "An image of a schnoodle">
 
