--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
 
-<p>Table of contents</p>
+<h2>Table of contents</h2>
 
-<ul compact>
+<ul>
     <li><a href = "Schnoodle.html">Schnoodle</a></li>
     <li><a href = "Labrador.html">Labrador</a></li>
     <li><a href = "Beagle.html">Beagle</a></li>
