--- a/Beagle.html
+++ b/Beagle.html
@@ -2,6 +2,14 @@
 <html lang = "en">
 <head>
 
+<style>
+    .imageCenter{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
+
 <title>Beagle</title>
     
 </head>
@@ -10,7 +18,12 @@
 
 <header><h1>Beagle</h1></header>
 
-<a = href = "index.html">Navigator</a>
+<a = href = "index.html"><h2>Navigator</h2></a>
+
+<img class = "imageCenter"
+src = "Pictures/Beagle.jpg"
+alt = "A picture of a Beagle"
+width = "25%">
 
 </body>
 </html>
