--- a/Labrador.html
+++ b/Labrador.html
@@ -2,6 +2,14 @@
 <html lang = "en">
 <head>
 
+<style>
+    .imageCenter{
+        display:block;
+        margin-left: auto;
+        margin-right: auto  ;
+    }
+</style>
+
 <title>Labrador</title>
     
 </head>
@@ -10,7 +18,12 @@
 
 <header><h1>Labrador</h1></header>
 
-<a = href = "index.html">Navigator</a>
+<a = href = "index.html"><h2>Navigator</h2></a>
+
+<img class = "imageCenter"
+src = "Pictures/Labrador.jpg"
+alt = "A picture of a labrador"
+width = "25%">
 
 </body>
 </html>
