Adding an input box for favorite dog

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <li><a href = "Beagle.html">Beagle</a></li>
 </ul>
 
+<fieldset>
+<lable for = "favDog">What is your favorite dog<br></lable>
+<input type = "text" id = "favDog", placeholder = "Enter your favorite dog here">
+</fieldset>>
+
 </body>
 
 </html>
